--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@types/leaflet": "^1.9.16",
     "@types/react-leaflet": "^2.8.3",
+    "aos": "^2.3.4",
     "canvas-sketch-util": "^1.10.0",
     "framer-motion": "^12.4.3",
     "glsl": "^0.0.1",
@@ -29,6 +30,7 @@
     "postprocessing": "^6.36.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.3",
     "simple-input-events": "^2.0.0",
